# nbsh

./: Cargo.toml  Makefile  deny.toml
src/: action.rs  builtins.rs  command.rs  config.rs  dirs.rs  env.rs  event.rs  format.rs  history.pest  history.rs  info.rs  main.rs  mutex.rs  nbsh.rs  parse.rs  pipe.rs  prelude.rs  readline.rs  repl.rs  shell.pest  state.rs  test_parse.rs  util.rs
src/builtins/: command.rs  mod.rs
src/parse/: ast.rs  mod.rs  test_ast.rs
src/pipeline/: command.rs  mod.rs
src/pipeline/builtins/: command.rs  mod.rs
src/runner/: command.rs  mod.rs  prelude.rs  sys.rs
src/runner/builtins/: command.rs  mod.rs
src/shell/: event.rs  git.rs  mod.rs  old_history.rs  prelude.rs  readline.rs
src/shell/history/: entry.rs  job.rs  mod.rs  pty.rs  vt.rs
src/shell/inputs/: clock.rs  git.rs  mod.rs  signals.rs  stdin.rs
src/state/: history.rs  mod.rs  readline.rs
src/state/history/: builtins.rs  entry.rs  mod.rs  pty.rs
