[package]
name = "nbsh"
version = "0.1.0"
edition = "2021"

license = "MIT"

[dependencies]
anyhow = "1.0.52"
async-std = { version = "1.10.0", features = ["unstable"] }
bincode = "1.3.3"
blocking = "1.1.0"
futures-lite = "1.12.0"
futures-util = "0.3.19"
git2 = "0.13.25"
glob = "0.3.0"
hostname = "0.3.1"
libc = "0.2.112"
nix = "0.23.1"
notify = "4.0.17"
once_cell = "1.9.0"
paw = "1.0.0"
pest = "2.1.3"
pest_derive = "2.1.0"
pty-process = { version = "0.2.0", features = ["async"] }
serde = { version = "1.0.133", features = ["derive"] }
signal-hook-async-std = "0.2.2"
structopt = { version = "0.3.25", features = ["paw", "wrap_help"] }
terminal_size = "0.1.17"
textmode = { version = "0.3.0", features = ["async"] }
time = { version = "0.3.5", features = ["formatting", "parsing"] }
unicode-width = "0.1.9"
users = "0.11.0"
vt100 = "0.15.1"

[patch.crates-io]
# https://github.com/smol-rs/async-process/pull/19
async-process = { git = "https://github.com/doy/async-process" }
pty-process = { git = "https://github.com/doy/pty-process" }
