[package]
name = "nbsh"
version = "0.1.0"
edition = "2021"

license = "MIT"

[dependencies]
anyhow = "1.0.55"
bincode = "1.3.3"
bytes = "1.1.0"
futures-util = "0.3.21"
git2 = "0.14.0"
glob = "0.3.0"
hostname = "0.3.1"
libc = "0.2.119"
nix = "0.23.1"
notify = "4.0.17"
once_cell = "1.9.0"
paw = "1.0.0"
pest = "2.1.3"
pest_derive = "2.1.0"
pty-process = { version = "0.2.0", features = ["async"] }
serde = { version = "1.0.136", features = ["derive"] }
structopt = { version = "0.3.26", features = ["paw", "wrap_help"] }
terminal_size = "0.1.17"
textmode = { version = "0.3.0", features = ["async"] }
time = { version = "0.3.7", features = ["formatting", "parsing"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.0", features = ["io"] }
unicode-width = "0.1.9"
users = "0.11.0"
vt100 = "0.15.1"

[patch.crates-io]
nix = { git = "https://github.com/nix-rust/nix" }
pty-process = { git = "https://github.com/doy/pty-process" }
textmode = { git = "https://github.com/doy/textmode" }
